<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RekapPenjualan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pbRekapOrder"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_main_blue">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Rekap Penjualan Harian"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/dateFrom"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/txtRekapDateStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textView12"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateEnd"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/txtRekapDateEnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    app:layout_constraintEnd_toEndOf="@+id/txtRekapDateStart"
                    app:layout_constraintTop_toTopOf="@+id/textView14" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/subtotalHPP"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textView14"
                    app:layout_constraintTop_toBottomOf="@+id/textView14" />

                <TextView
                    android:id="@+id/txtRekapTotalHPP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 0"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="@+id/txtRekapDateEnd"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotalMargin"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13" />

                <TextView
                    android:id="@+id/txtRekapTotalMargin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 0"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textView18"
                    app:layout_constraintEnd_toEndOf="@+id/txtRekapTotalHPP"
                    app:layout_constraintTop_toTopOf="@+id/textView18" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/subtotalprice_cart"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView18"
                    app:layout_constraintTop_toBottomOf="@+id/textView18" />

                <TextView
                    android:id="@+id/txtRekapTotalSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rp 0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/textView22"
                    app:layout_constraintEnd_toEndOf="@+id/txtRekapTotalMargin"
                    app:layout_constraintTop_toTopOf="@+id/textView22" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRekapOrder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
